--- a/src/controlasistencia/HOME.form
+++ b/src/controlasistencia/HOME.form
@@ -5085,10 +5085,7 @@
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="1" attributes="0">
                                       <Component id="rA_path" alignment="0" max="32767" attributes="0"/>
-                                      <Group type="102" alignment="1" attributes="0">
-                                          <EmptySpace max="32767" attributes="0"/>
-                                          <Component id="rA_alta" min="-2" max="-2" attributes="0"/>
-                                      </Group>
+                                      <Component id="rA_alta" alignment="1" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
                               </Group>
